--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <p>About Me!</p>
+    <p>About Me</p>
     <h1>Dae Grodin</h1>
     <hr>
-    <h2>"My Hobbies"</h2>
+    <h2>My Hobbies</h2>
     <ul>
         <li>Dog Sports</li>
         <li>Photography</li>
         <li>Hiking</li>
     </ul>
-    <h2>"My Goals for 2025"</h2>
+    <h2>My Goals for 2025</h2>
     <ol>
         <li>Various dog certifications and titles with my dogs in Search and Rescue, Dock Diving, and FETCH
         <li>Pass Code:You</li>
