--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>About Me!</p>
+    <title>About Me!</title>
     <h1>Dae Grodin</h1>
     <hr>
     <h2>My Hobbies</h2>
