--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Me</title>
 </head>
 <body>
-    <title>About Me!</title>
     <h1>Dae Grodin</h1>
     <hr>
     <h2>My Hobbies</h2>
