--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </ul>
     <h2>My Goals for 2025</h2>
     <ol>
-        <li>Various dog certifications and titles with my dogs in Search and Rescue, Dock Diving, and FETCH
+        <li>Various dog certifications and titles with my dogs in Search and Rescue, Dock Diving, and FETCH</li>
         <li>Pass Code:You</li>
         <li>Work on increasing private training clients in business</li>
     </ol>
